# cosmic-tailscale-applet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
data/: com.github.bhh32.GUIScaleApplet.desktop  com.github.bhh32.GUIScaleApplet.metainfo.xml
i18n/en/: gui_scale_applet.ftl
i18n/nl/: gui_scale_applet.ftl
i18n/sv/: gui_scale_applet.ftl
nix/: hm-module.nix  nixos-module.nix
src/: config.rs  error.rs  i18n.rs  logic.rs  main.rs  window.rs
