[package]
name = "gui-scale-applet"
version = "3.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.31", features = ["process", "time"] }
serde = "1.0.210"
url = "2.4.0"
regex = "1.11.1"
dirs = "6"
thiserror = "2"
tracing = "0.1"
serde_json = "1"
rust-embed = "8"
i18n-embed-fl = "0.10"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland", "tokio", "desktop"]

[features]
xdg-portal = ["libcosmic/xdg-portal"]
rfd = ["libcosmic/rfd"]
default = ["xdg-portal"]
